[project]
name = "gcp-mcp"
version = "0.1.0"
description = "Experimental MCP server for interacting with Google Cloud Platform resources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "google-cloud-secretmanager>=2.23.3",
]

[project.scripts]
gcp-mcp = "gcp:mcp.run"

[tool.ruff]
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
